--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
         <a class="button" target="_blank" href="https://www.youtube.com/">Donate Now</a>
     
     </div>
-    
-</body>
+    <h3>Our donate plan</h3>
+    <p class="paragraph-2">we distribute these monney in three diferent category.</br>let's talk about our distribution.</p>
+    </div>
+        <div class="categories">
+           <section id="color-category-one">
+            <div class="distribution">
+                <h4>Food for a family</h4>
+                <img src="images/icons/food.png" alt="">
+                <p class="paragraph-3">Most of the Flooded people suffer for pure water and healthy food.People hardly find any shop or supermarket for buing food .so ,we decided that at first we help these people by giving food.In this category they get 1 bottle pure water, some dry food and so on</p>
+            </div>
+           </section>
+           <section id="color-categor-two">
+            <div class="distribution">
+                <h4>Medicin for all</h4>
+                <img src="images/icons/Frame-1.png" alt="">
+                <p class="paragraph-3">Most of the children and older people face some water releted problem such as colera,tifoyed .we decided that we provide some medicin  for those people who are going to ill or illness people .</p>
+            </div>
+           </section>
+            <section id="color-category-three">
+                <div class="distribution">
+                    <h4>Help in sheltering</h4>
+                    <img src="images/icons/shelter.png" alt="">
+                    <p class="paragraph-3">It is our last step.when people release from the flood water,they hardly find their houses.In that time we help them by giving hand as well as money.we try our best to help flooded people.keeps us in our prayer.  </p>
+                </div>
+            </section>
+        </div>
+
+    </body>
 </html>
