--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                 </div>
             </section>
         </div>
+        <section id="text-image">
+            <div class="half-width">
+            <h5>What's going on there</h5>
+            <p class="paragraph-3">While this is the scenario in the city, one can only imagine the suffering the people in the remote areas of Sylhet and Sunamganj have been enduring since Wednesday. Just imagine: Your house is under floodwater, there's no electricity, your phone is out of charge and mobile network, there's no food or any hope of being rescued.</p>
+            <a class="button" target="_blank" href="https://www.google.com/search?q=flooded+area+in+sylhet+images+download&sxsrf=ALiCzsZiHwkJ3xJTCa2QGPQKNVn_fMwgbw:1657123490665&tbm=isch&source=iu&ictx=1&vet=1&fir=Z0Ndp_kXkxFR4M%252CjIxcNtHwLZMt2M%252C_%253BTH3q7YeeyT7pMM%252CHPUkhA6RtKGDQM%252C_%253BpO8gESPbR_Lh1M%252CdPIe4YRmANrvrM%252C_%253Bksf8b9GamPMmwM%252Cp5xwcJ9qoALphM%252C_%253B3sv353MEf5IkuM%252CWnLRX_4FaIocoM%252C_%253BTBQ1Ce3LHiSL8M%252ChaMCHN1hVlMNjM%252C_%253ByUk3imDfUAPPHM%252CiLZxqNzwZrdCWM%252C_%253BKnAclgR3YNBTQM%252CF7p7btG5RSb5SM%252C_%253BFc5py2aMlPyPdM%252Cp5xwcJ9qoALphM%252C_%253B0W5A3F29Xf-Q8M%252CQcI8KoERju1zFM%252C_&usg=AI4_-kTzXZ3HHvXLV7k-zoi9uTDExt9Ilg&sa=X&ved=2ahUKEwji_ImI0uT4AhUsS2wGHej1Dc8Q9QF6BAgLEAE#imgrc=TH3q7YeeyT7pMM">See more</a>
+            </div>
+         <div class="half-width">
+            <img src="images/s1-6284e2b3c8c0c.jpg" alt="">
+         </div>
+        </section>
 
     </body>
 </html>
