--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             <img src="images/s1-6284e2b3c8c0c.jpg" alt="">
          </div>
         </section>
+        <footer>
+            <h6>Get my updates</h6>
+            <p class="paragraph-2">In many crisis situation,i try my best to help people.</br>This time i came here for the people of sylhet.i hope that everyone  contribute in my work.</p>
+        </footer>
+        <div class="finishing">
+            <input type="email" name="" id="">
+
+        </div>
+
 
     </body>
 </html>
