--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <p class="paragraph-2">In many crisis situation,i try my best to help people.</br>This time i came here for the people of sylhet.i hope that everyone  contribute in my work.</p>
         </footer>
         <div class="finishing">
-            <input type="email" name="" id="">
-
+            <input id="email-color" type="email" name="email" id="email" placeholder="email">
+            <button class="subscription" type="submit">subscription</button>
         </div>
 
 
